# libmw

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: SetCpp17.cmake  SetOptimizations.cmake  SetOutputDir.cmake  SetRuntimeLibrary.cmake  SetUsePthread.cmake  SetVisibilityHidden.cmake  SetWarningLevel.cmake  SetWarningLevel4.cmake  mingw-w64-x86_64.cmake
doc/: Consensus.md  build.md
include/ext/: interfaces.h  libmw.h
include/libmw/: defs.h  interfaces.h  libmw.h  miner.h  node.h  wallet.h
include/libmw/interfaces/: chain_interface.h  db_interface.h  wallet.h  wallet_interface.h
include/mw/chain/: ChainState.h  UTXOSet.h
include/mw/common/: BitSet.h  ChildProcess.h  Functional.h  ImportExport.h  Lock.h  Logger.h  Macros.h  Scheduler.h  Secure.h  ThreadManager.h
include/mw/config/: BaseConfig.h  ChainParams.h
include/mw/consensus/: Aggregation.h  BlockSumValidator.h  Consensus.h  CutThrough.h  KernelSignatureValidator.h  KernelSumValidator.h  OwnerSumValidator.h  OwnerValidator.h  TxValidator.h  Weight.h
include/mw/crypto/: Blinds.h  Crypto.h  Hasher.h  Keys.h  Random.h  Schnorr.h
include/mw/db/: CoinDB.h  IBlockDB.h  IBlockStore.h  LeafDB.h  VectorDB.h
include/mw/exceptions/: LTCException.h  ValidationException.h
include/mw/file/: AppendOnlyFile.h  BitmapFile.h  File.h  FilePath.h  FileRemover.h  MemMap.h
include/mw/ltc/: Context.h  Node.h
include/mw/ltc/chain/: ChainState.h  UTXOSet.h
include/mw/ltc/node/: Context.h  INode.h  NodeConfig.h
include/mw/mmr/: Backend.h  Index.h  Leaf.h  LeafIndex.h  LeafSet.h  MMR.h  MMRFactory.h  MMRInfo.h  MMRUtil.h  Node.h  PruneList.h
include/mw/mmr/backends/: FileBackend.h  (+1 more)
include/mw/node/: BlockBuilder.h  CoinsView.h  ICoinsView.h  INode.h  NodeConfig.h
include/mw/serialization/: Deserializer.h  Json.h  Serializer.h
include/mw/traits/: Batchable.h  Committed.h  Hashable.h  Jsonable.h  Serializable.h
include/mw/util/: BitUtil.h  HexUtil.h  StringUtil.h  ThreadUtil.h  TimeUtil.h
include/mw/wallet/: KernelFactory.h  OutputFactory.h  TxFactory.h  Wallet.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Logger.cpp  LoggerImpl.cpp  LoggerImpl.h  ThreadManagerImpl.cpp  ThreadManagerImpl.h
src/crypto/: AggSig.cpp  AggSig.h  Bulletproofs.cpp  Bulletproofs.h  BulletproofsCache.h  CMakeLists.txt  Context.h  ConversionUtil.cpp  ConversionUtil.h  Crypto.cpp  MuSig.cpp  MuSig.h  Pedersen.cpp  Pedersen.h  PublicKeys.cpp  PublicKeys.h  Schnorr.cpp  Schnorr.h
src/db/: BlockDB.cpp  BlockDB.h  CMakeLists.txt  ChainStore.cpp  ChainStore.h  CoinDB.cpp  LeafDB.cpp  VectorDB.cpp
src/db/common/: DBEntry.h  DBFilterPolicy.h  DBLogger.h  DBTable.h  DBTransaction.h  Database.h  Serializable.h  SerializableVec.h
src/file/: CMakeLists.txt  File.cpp
src/libmw/: BlockStoreWrapper.h  CMakeLists.txt  State.h  Transformers.h  defs.cpp  libmw.cpp  libmw_miner.cpp  libmw_node.cpp  libmw_wallet.cpp
src/mmr/: BackedLeafSet.cpp  CMakeLists.txt  ILeafSet.cpp  LeafSet.cpp  LeafSetCache.cpp  MMR.cpp  MMRCache.cpp  MMRFactory.cpp  PruneList.cpp
src/mmr/backends/: FileBackend.cpp
src/models/: CMakeLists.txt
src/models/crypto/: PublicKey.cpp
src/models/tx/: Kernel.cpp  Output.cpp  OwnerData.cpp  Transaction.cpp  TxBody.cpp
src/node/: BlockBuilder.cpp  CMakeLists.txt  CoinsView.h  CoinsViewCache.cpp  CoinsViewDB.cpp  CoinsViewFactory.cpp  CoinsViewFactory.h  Context.cpp  ICoinsView.cpp  Node.cpp  Node.h  Snapshot.cpp
src/node/validation/: BlockValidator.cpp
src/traits/: CMakeLists.txt
src/wallet/: CMakeLists.txt  CoinSelection.h  KernelFactory.h  Keychain.cpp  PegIn.cpp  PegIn.h  PegOut.cpp  PegOut.h  Transact.cpp  Transact.h  Wallet.cpp  WalletUtil.h
test/: CMakeLists.txt
test/framework/: CMakeLists.txt
test/framework/include/test_framework/: Chain.h  DBWrapper.h  Miner.h  Node.h  RootCalculator.h  TestLeafSet.h  TestUtil.h  TestWallet.h  TxBuilder.h
test/framework/include/test_framework/models/: MinedBlock.h  Tx.h  TxInput.h  TxOutput.h
test/framework/src/: Node.cpp  TxBuilder.cpp
test/framework/src/models/: Tx.cpp
test/tests/chain/: CMakeLists.txt  Test_ChainState.cpp
test/tests/common/: CMakeLists.txt  Test_Scheduler.cpp
test/tests/consensus/: CMakeLists.txt  Test_Aggregation.cpp  Test_BlockSumValidator.cpp  Test_CutThrough.cpp  Test_KernelSumValidator.cpp  Test_Weight.cpp
test/tests/crypto/: CMakeLists.txt  Test_AddCommitments.cpp  Test_AggSig.cpp  Test_RangeProofs.cpp
test/tests/db/: CMakeLists.txt  Test_Database.cpp  Test_LeafDB.cpp  Test_VectorDB.cpp
test/tests/file/: CMakeLists.txt  TestUtil.h  Test_BitmapFile.cpp
test/tests/mmr/: CMakeLists.txt  Test_FileBackend.cpp  Test_LeafSet.cpp  Test_LeafSetCache.cpp  Test_MMR.cpp  Test_MMRUtil.cpp
test/tests/models/: CMakeLists.txt
test/tests/models/block/: Test_Block.cpp  Test_Header.cpp
test/tests/models/crypto/: Test_BigInteger.cpp
test/tests/models/tx/: Test_Input.cpp  Test_Kernel.cpp  Test_Output.cpp  Test_OutputId.cpp  Test_PegInCoin.cpp  Test_PegOutCoin.cpp  Test_Transaction.cpp  Test_TxBody.cpp  Test_UTXO.cpp
test/tests/models/wallet/: Test_WalletOutput.cpp
test/tests/node/: CMakeLists.txt  Test_BlockBuilder.cpp  Test_CheckTxInputs.cpp  Test_CoinsViewDB.cpp  Test_MineChain.cpp  Test_Reorg.cpp
test/tests/node/validation/: Test_BlockValidator.cpp  Test_StateValidator.cpp
test/tests/serialization/: CMakeLists.txt  Test_Deserializer.cpp  Test_Json.cpp  Test_Serializer.cpp
test/tests/util/: CMakeLists.txt  Test_BitUtil.cpp
test/tests/wallet/: CMakeLists.txt  Test_GetStealthAddress.cpp  Test_PegOut.cpp  Test_Pegins.cpp  Test_SendReceive.cpp
tests/: CMakeLists.txt  TestMain.cpp
tests/include/test_framework/: Node.h
tests/models/: CMakeLists.txt
tests/models/block/: Test_Block.cpp  Test_Header.cpp
tests/models/tx/: Test_Kernel.cpp
tests/src/chain/: CMakeLists.txt  Test_ChainState.cpp
tests/src/models/: CMakeLists.txt
tests/src/models/tx/: Test_Kernel.cpp
tests/src/node/: CMakeLists.txt
tests/src/node/validation/: Test_BlockValidator.cpp
vcpkg/: packages.txt
(+41 files in other folders)
